Halveis ferdig label to name fil

--- a/RecognitionModel/RecognitionModel.csproj
+++ b/RecognitionModel/RecognitionModel.csproj
@@ -51,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraController.cs" />
+    <Compile Include="FaceDatasetManager.cs" />
+    <Compile Include="FaceUtils.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
